--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title>Hi, I'm Aisha</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,19 +20,28 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
+          <header>
+            <h1>Hi, I'm Aisha.</h1>
+          </header>
+          <main>
+            <h2> I am a <span>Responsive Designer &amp; Developer</span> who thrives on visual storytelling. When I'm not working, pursuing
+              side projects, or getting lost in the rabbit hole of blogs &amp; books, I can be found traveling, hiking, and searching
+              for new stories.</h2>
+          </main>
+          <hr />
             <div class="div-1">
-                <p>I was born and raised in NYC, but my real roots reach to South America. 
-                    I owe my travel bug to being a first generation American with family 
+                <p>I was born and raised in NYC, but my real roots reach to South America.
+                    I owe my travel bug to being a first generation American with family
                     all over the world - we were always on the go!
                 </p>
             </div>
             <div class="line">
             </div>
             <div class="div-2">
-                <p>My passion: I LOVE music - it's one of the most powerful and diverse methods 
-                    for expression and communication. In the meantime I get my fix by going to 
+                <p>My passion: I LOVE music - it's one of the most powerful and diverse methods
+                    for expression and communication. In the meantime I get my fix by going to
                     lots &amp; lots of concerts. I'm at 160 and counting!
                 </p>
             </div>
@@ -45,7 +54,10 @@
                     to drive. But, the real takeaway is that I'm learning!
                 </p>
             </div>
-        </section>    
+            <hr />
+            <footer>
+            </footer>
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
